--- a/action.yml
+++ b/action.yml
@@ -86,4 +86,4 @@ runs:
         zone: ${{inputs.compute_zone}}
         ssh_private_key: '${{ inputs.instance_ssh_private_key }}'
         user: ${{inputs.instance_ssh_username}}
-        command: docker rmi $(docker images ${{env.CONTAINER_IMAGE}} -a -q)
+        command: docker rmi \$(docker images ${{env.CONTAINER_IMAGE}} -a -q)
